Styles of the main section

--- a/index.html
+++ b/index.html
@@ -31,27 +31,27 @@
     <main class="main">
       <h2 class="main__text">Some random information</h2>
       <section class="main__ilustrations">
-        <article class="main__blocks">
+        <article class="main__block">
           <div class="main__img"></div>
-          <p class="main__text">
+          <p class="main__block-text">
             this is some subtext under an illustration or image
           </p>
         </article>
-        <article class="main__blocks">
+        <article class="main__block">
           <div class="main__img"></div>
-          <p class="main__text">
+          <p class="main__block-text">
             this is some subtext under an illustration or image
           </p>
         </article>
-        <article class="main__blocks">
+        <article class="main__block">
           <div class="main__img"></div>
-          <p class="main__text">
+          <p class="main__block-text">
             this is some subtext under an illustration or image
           </p>
         </article>
-        <article class="main__blocks">
+        <article class="main__block">
           <div class="main__img"></div>
-          <p class="main__text">
+          <p class="main__block-text">
             this is some subtext under an illustration or image
           </p>
         </article>
