--- a/index.html
+++ b/index.html
@@ -59,18 +59,22 @@
     </main>
     <section class="quote">
       <p class="quote__text">
-        This is an inspiring quote, or a testimonial from a customer. Maybe it'sjust filling up space, or maybe people Will actual/y read it. Who knows? A1/ I know is that it looks nice.
+        This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people Will actually read it. Who knows? All I know is that it looks nice.
       </p>
       <p class="quote__author">
         - Thor, God of Thunder
       </p>
     </section>
     <article class="sign-up">
-      <h3 class="sign-up__title">Call to action! It's time!</h3>
-      <p class="sign-up__paragraph">
-        Sign up for our product by clicking that button right over there!
-      </p>
-      <button class="sign-up__button">Sign Up</button>
+      <div>
+        <h3 class="sign-up__title">Call to action! It's time!</h3>
+        <p class="sign-up__paragraph">
+          Sign up for our product by clicking that button right over there!
+        </p>
+      </div>
+      <div>
+        <button class="sign-up__button">Sign Up</button>
+      </div>
     </article>
     <footer class="footer">
       <p class="footer__text">
